# edne

./: .typos.toml  Cargo.toml  Justfile  README.md  TODO.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: cep_lookup.rs  main.rs
crates/edne/: Cargo.toml
crates/edne/benches/: localities_bench.rs
crates/edne/examples/: address.rs  big_user.rs  cpc.rs  locality.rs  neighborhood.rs  operational_unit.rs
crates/edne/src/: error.rs  lib.rs  model.rs
crates/edne/src/models/: address.rs  big_user.rs  cpc.rs  locality.rs  mod.rs  neighborhood.rs  operational_unit.rs  uf.rs
crates/edne/src/parser/: address.rs  addresses.rs  base.rs  big_users.rs  cpcs.rs  helpers.rs  localities.rs  locality.rs  mod.rs  neighborhoods.rs  operational_units.rs
