[package]
name = "edne-cli"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for parsing Brazilian eDNE files"

[[bin]]
name = "edne"
path = "src/main.rs"
doc = false

[dependencies]
edne.workspace = true

[lints]
workspace = true
